--- a/A3Mall/public/.htaccess
+++ b/A3Mall/public/.htaccess
@@ -1,9 +1,8 @@
 <IfModule mod_rewrite.c>
-  Options +FollowSymlinks -Multiviews
-  RewriteEngine On
-
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond $1 !^(static|uploads)
-  RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
+ RewriteEngine on
+ RewriteBase /
+ RewriteCond %{REQUEST_FILENAME} !-d
+ RewriteCond %{REQUEST_FILENAME} !-f
+   RewriteCond $1 !^(static|uploads)
+ RewriteRule ^(.*)$ index.php?s=/$1 [QSA,PT,L]
 </IfModule>
